fixed overlapping french text in menu-dropdown

--- a/app/assets/stylesheets/partials/main/_menus.scss
+++ b/app/assets/stylesheets/partials/main/_menus.scss
@@ -37,7 +37,10 @@ nav {
 
 .dropdown-menu > li > a{
   color: #0d59a6;
-  padding: 8px;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 25px;
 }
 
 .dropdown-menu > li:last-child > a{
